se optimiza la imagen: - se reduce el peso por la mitad creando el jre con jlink - usando multi-stage - creacion de un usuario por seguridad no usar el root